--- a/pages/topics/topics.wxml
+++ b/pages/topics/topics.wxml
@@ -1,16 +1,16 @@
 <view class="topics-main">
     <view class="top-bar">
-        <view class="top-bar-item" id="all" catchtap="onTapTag">全部</view>
-        <view class="top-bar-item" id="good" catchtap="onTapTag">精华</view>
-        <view class="top-bar-item" id="share" catchtap="onTapTag">分享</view>
-        <view class="top-bar-item" id="ask" catchtap="onTapTag">问答</view>
-        <view class="top-bar-item" id="job" catchtap="onTapTag">招聘</view>
+        <view class="top-bar-item {{allActive}}" id="all" catchtap="onTapTag">全部</view>
+        <view class="top-bar-item {{goodActive}}" id="good" catchtap="onTapTag">精华</view>
+        <view class="top-bar-item {{shareActive}}" id="share" catchtap="onTapTag">分享</view>
+        <view class="top-bar-item {{askActive}}" id="ask" catchtap="onTapTag">问答</view>
+        <view class="top-bar-item {{jobActive}}" id="job" catchtap="onTapTag">招聘</view>
     </view>
     <scroll-view class="posts-list" style="height:100%" scroll-y="true" bindscrolltolower="lower" >
         <block wx:for="{{postsList}}" wx:key="1">
             <view class="posts-item" index="{{index}}" id="{{item.id}}" catchtap="redictDetail">
             <view class="author">
-            <image class="author-avatar" src="{{item.author.avatar_url}}"></image>
+                <image class="author-avatar" src="{{item.author.avatar_url}}"></image>
             <view class="author-name">{{item.author.loginname}}</view>
             <view class="posts-tag hot" wx:if="{{item.top === true}}">置顶</view>
             <view class="posts-tag" wx:if="{{item.good === true}}">精华</view>
